[package]
name = "rdp-client"
version = "0.1.0"
authors = ["Andrew Lytvynov <andrew@goteleport.com>", "Zac Bergquist <zac@goteleport.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "2.5.0"
byteorder = "1.5.0"
env_logger = "0.11.2"
iso7816 = "0.1.2"
iso7816-tlv = "0.4.4"
libc = "0.2.153"
log = "0.4.21"
num-derive = "0.4.2"
num-traits = "0.2.18"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
rsa = "0.9.6"
rdp-rs = { git = "https://github.com/gravitational/rdp-rs", rev = "75eb6a30b83e7152ee6213964b5ac6e783304840" }
uuid = { version = "1.8.0", features = ["v4"] }
utf16string = "0.2.0"
png = "0.17.13"

[build-dependencies]
cbindgen = "0.26.0"
tempfile = "3.10.1"

[features]
fips = ["rdp-rs/fips"]
